# Small-Project-1

./: .gitignore  GRPO_FIX_V1.md  README.md  Untitled-1  explain.py  find_common_questions.py  generate_gsm8k_table.py  gold_data_chat_template.py  gold_data_no_chat_template.py  pyproject.toml  run_control_eval.sh  run_evals.sh  run_evals_v2.sh  run_evals_v3.sh  run_experiments.py  run_official_sdft.py
configs/: dpo.yaml  dpo_akshat.yaml  dpo_naive.yaml  eval.yaml  grpo.yaml  grpo_old.yaml  on_policy_sft.yaml  sdft.yaml  sft.yaml
official_self_distillation/Self-Distillation/: .gitignore  distil_trainer.py
results/gold_data/chat_template/gsm8k/: rollouts.jsonl
results/gold_data/chat_template/math/: rollouts.jsonl
results/gsm8k/models/grpo_chat_template/: config_snapshot.yaml  run_info.yaml
src/: __init__.py  config_utils.py  data.py  evaluate.py  report.py  train_dpo.py  train_dpo_updated.py  train_grpo.py  train_on_policy_sft.py  train_sdft.py  train_sft.py
tasks/: __init__.py  base.py  gsm8k.py  math.py  registry.py
